<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mpe_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:clickable="true"
                app:backgroundTint="@android:color/white"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/plan_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="Meal Plan Name"
                android:maxWidth="320dp"
                android:textSize="25dp"/>


            <TextView
                android:id="@+id/plan_edit_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:paddingTop="15dp"
                android:textSize="30dp"
                android:text="Comment"
                />

            <EditText
                android:id="@+id/plan_edit_comment_txt"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="3dp"
                android:background="@drawable/customborder"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plan_edit_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="Start Date"
                    android:paddingTop="15dp"
                    android:textSize="30dp" />

                <DatePicker
                    android:id="@+id/editPlanStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:datePickerMode="calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plan_edit_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="End Date"
                    android:paddingTop="15dp"
                    android:textSize="30dp" />

                <DatePicker
                    android:id="@+id/editPlanEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:datePickerMode="calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Recipes"
                    android:paddingTop="15dp"
                    android:textSize="30dp"  />

                <Button
                    android:id="@+id/plan_edit_add_recipes_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/plan_edit_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="never" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Ingredients"
                    android:paddingTop="15dp"
                    android:textSize="30dp"  />

                <Button
                    android:id="@+id/plan_edit_add_ingr_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/plan_edit_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="never" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mpe_save_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Save" />

                <Button
                    android:id="@+id/mpe_cancel_plan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="Cancel" />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
