...
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="Serving"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/serving_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text=""
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="Cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Save" />


...
